--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,17 @@ project_version=1.0
 # dependencies
 version_nebula=4.0.1
 version_skywalking=6.2.0
+version_slate=14.5-SNAPSHOT
+version_spring_boot=2.1.0.RELEASE
+version_spring_boot_admin=2.1.0
+version_slf4j=1.7.26
+version_logback=1.2.3
 
 # build vm options
 org.gradle.jvmargs=-Xmx2560M -XX:MaxPermSize=512m
 
-# local repository path | 本地仓库路径
+# local repository path
 repository_localRepositoryPath=file:C:/m2repository/repository
 
-# maven upload target | MAVEN上传目标(中心库/本地库/私有库)
+# maven upload target
 upload_target=local
