--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ buildscript {
 
     //构建脚本依赖
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:$version_spring_boot")
+        //重要: 打包插件
         classpath "com.github.jengelman.gradle.plugins:shadow:5.1.0"
+        //Spring Boot 插件
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:$version_spring_boot")
     }
 
 }
