--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
     //构建脚本依赖
     dependencies {
-        //重要: 打包插件
+        //重要: 打包插件 这个在jcenter(其实在https://repo.spring.io/plugins-release/)
         classpath "com.github.jengelman.gradle.plugins:shadow:5.1.0"
         //Spring Boot 插件
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$version_spring_boot")
