1> thistle/slate -> glacimon

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ project_version=1.0
 # dependencies
 version_nebula=4.0.1
 version_skywalking=6.3.0
-version_slate=14.4
+version_glacimon=2022.0.0
 version_spring_boot=2.3.6.RELEASE
 version_spring_boot_admin=2.3.1
 version_slf4j=1.7.26
