--- a/sample-web/src/main/resources/application.yaml
+++ b/sample-web/src/main/resources/application.yaml
@@ -19,8 +19,7 @@ spring:
 
 #####################################################################
 
-## Slate config
-slate:
+glacispring:
   common:
     servlet-context-listener-enabled: true
 #  httpclient:
